tests/expectations/compiler/network/span_network.out
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:5:9
     |
   5 | program parent.aleo {}
     |         ^^^^^^^^^^^
